--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 ﻿/*
-Theme Name: Almi-Product
+Theme Name: Strader-Art
 Theme URI: 
 Author: Asmi-Studio
 Author URI: 
-Description: Almi-Product
+Description: Strader-Art
 Version: 1.0.1
-Tags: pet,almi
+Tags: pet,strader
 */
 
 
